# dynobjects

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/dynobjects/: Basic.h  BasicTypes.h  ContainersOperators.h  Generic.h  Instance.h  Object.h  Operators.h  Standard.h  Utils.h
src/: CMakeLists.txt
src/dynobjects/: Object.cpp  Utils.cpp
tests/: CMakeLists.txt  CTestTestfile.cmake
tests/Testing/Temporary/: CTestCostData.txt
tests/dynobjects/: CMakeLists.txt  CTestTestfile.cmake  TestBasic.cpp  TestBasic.h  TestGeneric.cpp  TestGeneric.h  TestRunner.cpp
